[tool.poetry]
name = "youtube-analytics-project1"
version = "0.1.0"
description = ""
authors = ["BersUmar <umar-03@inbox.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
